// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentForm /> should match a snapshot with a complex avatar badge 1`] = `
<div
  className="comment-form__StyledGrid-sc-1yidca9-0 kwVmiQ"
>
  <div
    className="comment-avatar__StyledAvatar-sc-10x87zp-0 fNhTWh"
  >
    <div
      className="comment-avatar__StyledPosition-sc-10x87zp-1 cBLdwX"
    >
      <div
        className="comment-avatar__StyledAvatarBadge-sc-10x87zp-3 giOOEs"
      >
        <svg
          height="25"
          viewBox="0 0 20 20"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Checked circle
          </title>
          <circle
            cx="10"
            cy="10"
            fill="#19b4fa"
            r="10"
          />
          <path
            d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
            fill="#fff"
          />
        </svg>
      </div>
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents comment-avatar__StyledButtonImage-sc-10x87zp-2 DuzOU"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
  </div>
  <div
    className="comment-form__StyledGridCol-sc-1yidca9-1 XZIme"
  >
    <div
      className="comment-form__StyledInput-sc-1yidca9-2 kGPLCq"
    >
      <textarea
        aria-describedby=""
        aria-invalid="false"
        aria-label=""
        aria-required="true"
        className="comment-form__StyledTextarea-sc-1yidca9-3 cadkuh"
        defaultValue=""
        disabled={false}
        id={null}
        onChange={[Function]}
        placeholder="Leave a comment on the project"
        rows="1"
      />
      <div
        className="comment-form__StyledArrow-sc-1yidca9-4 byYHHG"
      >
        <span
          className="comment-form__StyledArrowBefore-sc-1yidca9-5 dqidpL"
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 gWrqvV"
    >
      <span
        className="k-u-color-error k-u-size-micro k-u-weight-regular"
        id=""
      >
        Cum sociis natoque penatibus et magnis
      </span>
    </div>
  </div>
</div>
`;

exports[`<CommentForm /> should match its empty snapshot 1`] = `
<div
  className="comment-form__StyledGrid-sc-1yidca9-0 kwVmiQ"
>
  <div
    className="comment-avatar__StyledAvatar-sc-10x87zp-0 fNhTWh"
  >
    <div
      className="comment-avatar__StyledPosition-sc-10x87zp-1 cBLdwX"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents comment-avatar__StyledButtonImage-sc-10x87zp-2 DuzOU"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
  </div>
  <div
    className="comment-form__StyledGridCol-sc-1yidca9-1 XZIme"
  >
    <div
      className="comment-form__StyledInput-sc-1yidca9-2 kGPLCq"
    >
      <textarea
        aria-describedby=""
        aria-invalid="false"
        aria-label=""
        aria-required="true"
        className="comment-form__StyledTextarea-sc-1yidca9-3 cadkuh"
        defaultValue=""
        disabled={false}
        id="custom-textarea-id"
        onChange={[Function]}
        placeholder="Leave a comment on the project"
        rows="1"
      />
      <div
        className="comment-form__StyledArrow-sc-1yidca9-4 byYHHG"
      >
        <span
          className="comment-form__StyledArrowBefore-sc-1yidca9-5 dqidpL"
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 gWrqvV"
    >
      <span
        className="k-u-color-error k-u-size-micro k-u-weight-regular"
        id=""
      >
        Cum sociis natoque penatibus et magnis
      </span>
    </div>
  </div>
</div>
`;
